# forge-manager-public

./: README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/skills/forge-manager-workflow/: SKILL.md
docs/: feishu-records.md  github-sync-guide.md  operation-guide.md  project-overview.md
docs/intent/: normalized-requirement.md  original-requirement.md
plugins/forge-manager-workflow/.codex-plugin/: plugin.json
plugins/forge-manager-workflow/skills/forge-manager-workflow/: SKILL.md
skills/forge-manager-workflow/: SKILL.md
skills/forge-manager-workflow/agents/: openai.yaml
src/forge_manager/: __main__.py  cli.py  config.py  db.py  models.py
src/forge_manager/collectors/: __init__.py  codex.py  filesystem.py  git.py  nexus_lab.py  verix.py
src/forge_manager/dashboard/: app.py
src/forge_manager/dashboard/static/: app.js  index.html  style.css
src/forge_manager/renderers/: __init__.py  list_view.py  tree_view.py
src/forge_manager/reports/: __init__.py  activity.py  capabilities.py  project.py  status.py  structure.py
tests/: test_activity_and_capabilities.py
