[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-manager"
version = "0.1.0"
description = "Local project control layer for forge."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
forge-manager = "forge_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forge_manager = ["dashboard/static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
